# CSpec

./: CMakeLists.txt  CSpec.cmake  DESIGN.md  README.md  TODO.md
CSpec/: CSpec.cmake
Demo/: CMakeLists.txt  MySpecs.cmake  vcpkg-configuration.json  vcpkg.json
Examples/: CMakeLists.txt  HelloCSpec.cmake
Examples/spec/: AnotherSpec.cmake  HelloCSpec.cmake
Fonts/: Attribution.txt
Images/: Attribution.txt  CSpec.xcf
cmake/: CSpec.cmake  CSpec_v1.cmake  Config.cmake.in
cmake/CSpec/: AddCSpecSuite.cmake  CSpec_v1.cmake  Common.cmake  Discovery.cmake  Include.cmake  Runner.cmake
cmake/CSpec/Assertions/: DefaultAssertions.cmake  Expect.cmake  Files.cmake  Properties.cmake  Strings.cmake  Targets.cmake
cmake/CSpec/Discoverers/: Default.cmake
cmake/CSpec/Runners/: Immediate.cmake  ImmediateScript.cmake
